// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`graphql middleware query Articles 1`] = `
Object {
  "data": Object {
    "articles": Array [
      Object {
        "author": "Justin O'Connell, Contributor, Justin O'Connell, Contributor https://www.forbes.com/sites/justinoconnell/",
        "description": "Muneeb Ali, founder of Blockstack PBC: Bitcoin is the reserve currency of a unified digital society.",
        "publishedAt": "2020-04-12T23:40:09Z",
        "source": Object {
          "id": null,
          "name": "Forbes.com",
        },
        "title": "How Bitcoin Could Anchor Web 3.0",
        "url": "https://www.forbes.com/sites/justinoconnell/2020/04/12/how-bitcoin-could-anchor-web-30/",
        "urlToImage": "https://thumbor.forbes.com/thumbor/fit-in/1200x0/filters%3Aformat%28jpg%29/https%3A%2F%2Fspecials-images.forbesimg.com%2Fimageserve%2F5e939dcc01879f0006d2779b%2F0x0.jpg",
      },
      Object {
        "author": "Cointelegraph By Marcel Pechman",
        "description": "Following a set of simple trading rules can be the difference between a growing portfolio and a liquidated account. Here’s 10 rules to consider",
        "publishedAt": "2020-04-12T23:04:00Z",
        "source": Object {
          "id": null,
          "name": "Cointelegraph.com",
        },
        "title": "10 Tips to Keep Your Crypto Portfolio Profitable During a Crisis",
        "url": "https://cointelegraph.com/news/10-tips-to-keep-your-crypto-portfolio-profitable-during-a-crisis",
        "urlToImage": "https://images.cointelegraph.com/images/740_aHR0cHM6Ly9zMy5jb2ludGVsZWdyYXBoLmNvbS9zdG9yYWdlL3VwbG9hZHMvdmlldy83ZTc4OTBlMTdmZTI1ZDAyZGQxM2NlOTE4YmM2NzJiYi5qcGc=.jpg",
      },
      Object {
        "author": "Nick Chong",
        "description": "Crypto data provider Messari shared in a recent post that Ripple’s XRP was one of the worst-performing cryptocurrencies in Q1 of 2020, underperforming players like Bitcoin and Ethereum by a long shot. But, analysts are observing that the cryptocurrency is sta…",
        "publishedAt": "2020-04-12T23:00:33Z",
        "source": Object {
          "id": null,
          "name": "Newsbtc.com",
        },
        "title": "Ripple’s XRP Is Forming a Textbook Bottom Pattern: Will It Play Out?",
        "url": "https://www.newsbtc.com/2020/04/12/ripples-xrp-is-forming-a-textbook-bottom-pattern-will-it-play-out/",
        "urlToImage": "https://www.newsbtc.com/wp-content/uploads/2020/04/emiel-schalck-zxanvsT62cc-unsplash-1200x780.jpg",
      },
      Object {
        "author": "Cointelegraph By Samuel Haig",
        "description": "Coinbase identifies derivative arbitrage and stablecoin speculation opportunities created amid the recent crash",
        "publishedAt": "2020-04-12T22:00:00Z",
        "source": Object {
          "id": null,
          "name": "Cointelegraph.com",
        },
        "title": "Coinbase: Crypto Crash Created Rare Opportunities for Savvy Traders",
        "url": "https://cointelegraph.com/news/coinbase-crypto-crash-created-rare-opportunities-for-savvy-traders",
        "urlToImage": "https://images.cointelegraph.com/images/740_aHR0cHM6Ly9zMy5jb2ludGVsZWdyYXBoLmNvbS9zdG9yYWdlL3VwbG9hZHMvdmlldy8yNTU1YmYyMjlkNjU4NGFkYjc5ZTA4ODQ3ZjA4ZmQ5OC5qcGc=.jpg",
      },
      Object {
        "author": "Cointelegraph By Samuel Haig",
        "description": "Academic & economist John Vaz believes economic mismanagement could result in BTC functioning like cigarettes in prison amid financial crisis",
        "publishedAt": "2020-04-12T21:30:00Z",
        "source": Object {
          "id": null,
          "name": "Cointelegraph.com",
        },
        "title": "Bitcoin Could Become Like ‘Prison Cigarettes’ Amid Deepening Financial Crisis",
        "url": "https://cointelegraph.com/news/bitcoin-could-become-like-prison-cigarettes-amid-deepening-financial-crisis",
        "urlToImage": "https://images.cointelegraph.com/images/740_aHR0cHM6Ly9zMy5jb2ludGVsZWdyYXBoLmNvbS9zdG9yYWdlL3VwbG9hZHMvdmlldy9lOThhZDUyZDVjM2QyZjdiOWE4ZmUwMjk4ZjgwOWZlMi5qcGc=.jpg",
      },
      Object {
        "author": null,
        "description": "Boots on the ground looks more like fingertips on the keyboard for some members of the North Carolina National Guard as the threat of cyberattacks continues to grow.",
        "publishedAt": "2020-04-12T21:01:00Z",
        "source": Object {
          "id": null,
          "name": "Stripes.com",
        },
        "title": "Cybersecurity efforts by NC Guard responders help protect elections, governments and residents",
        "url": "https://www.stripes.com/news/us/cybersecurity-efforts-by-nc-guard-responders-help-protect-elections-governments-and-residents-1.625843?utm_source=feedburner&utm_medium=feed&utm_campaign=Feed%3A+starsandstripes%2Fgeneral+%28Stars+and+Stripes%29",
        "urlToImage": "https://www.stripes.com/polopoly_fs/1.625844.1586725146!/image/image.jpg_gen/derivatives/landscape_490/image.jpg",
      },
      Object {
        "author": "Cole Petersen",
        "description": "As Bitcoin attempts to gain a foothold above $7,000, analysts are noting that data shows large players within the market are currently foraying back into Bitcoin, which could be a sign that further volatility is imminent in the days and weeks ahead. Traders d…",
        "publishedAt": "2020-04-12T21:00:43Z",
        "source": Object {
          "id": null,
          "name": "Newsbtc.com",
        },
        "title": "Large Players are Hopping Back into Bitcoin as Analysts Eye More Blood",
        "url": "https://www.newsbtc.com/2020/04/12/large-players-are-hopping-back-into-bitcoin-as-analysts-eye-more-blood/",
        "urlToImage": "https://www.newsbtc.com/wp-content/uploads/2020/04/simon-migaj-VjIm5-UkvfY-unsplash-1200x780.jpg",
      },
      Object {
        "author": "Cointelegraph By Thomas Simms",
        "description": "Bitcoin drops to a key level, Jack Dorsey pledges $1 billion to fight the coronavirus, and how blockchain is being used to fight fake news in the age of COVID-19",
        "publishedAt": "2020-04-12T21:00:00Z",
        "source": Object {
          "id": null,
          "name": "Cointelegraph.com",
        },
        "title": "Bitcoin Shaky, Dorsey Donates, CoinMarketCap Attacked, Royal Scam: Hodler’s Digest, April 6–April 12",
        "url": "https://cointelegraph.com/news/bitcoin-shaky-dorsey-donates-coinmarketcap-attacked-royal-scam-hodlers-digest-april-6april-12",
        "urlToImage": "https://images.cointelegraph.com/images/740_aHR0cHM6Ly9zMy5jb2ludGVsZWdyYXBoLmNvbS9zdG9yYWdlL3VwbG9hZHMvdmlldy8xZjJiOTExODY5NGQ5OGIzMWMwMTM3MmJiZjk0ZGVhZC5qcGc=.jpg",
      },
      Object {
        "author": "Opportunity Trader",
        "description": "The price of Bitcoin has fluctuated substantially in the previous years.
        Following the upward momentum can create massive returns on investments.
        Managing downside risk is key when trading crypto assets.
        A simple trend following strate…",
        "publishedAt": "2020-04-12T20:58:57Z",
        "source": Object {
          "id": null,
          "name": "Seekingalpha.com",
        },
        "title": "Following The Trend In Bitcoin",
        "url": "https://seekingalpha.com/article/4337139-following-trend-in-bitcoin",
        "urlToImage": "https://static.seekingalpha.com/uploads/2020/4/9/936334-15864631145947847_origin.png",
      },
      Object {
        "author": "Cointelegraph By Keith Wareing",
        "description": "Bitcoin mining difficulty is rising as a mass exodus of Bitcoin Cash miners swap networks to mine BTC ahead of the May 2020 halving",
        "publishedAt": "2020-04-12T20:44:00Z",
        "source": Object {
          "id": null,
          "name": "Cointelegraph.com",
        },
        "title": "Are Bitcoin Cash Miners Driving Up the Price of Bitcoin?",
        "url": "https://cointelegraph.com/news/are-bitcoin-cash-miners-driving-up-the-price-of-bitcoin",
        "urlToImage": "https://images.cointelegraph.com/images/740_aHR0cHM6Ly9zMy5jb2ludGVsZWdyYXBoLmNvbS9zdG9yYWdlL3VwbG9hZHMvdmlldy8xZjYwNGY0MmI1Yzg4ZmI4ODhiOWQ3NWJlZmE5MTVkZS5qcGc=.jpg",
      },
      Object {
        "author": "Cointelegraph By Trent Lapinski",
        "description": "If even a good thing falls into the wrong hands, there may be disaster: Blockchain tech might help to build a Brave New World instead of promised decentralization",
        "publishedAt": "2020-04-12T20:00:00Z",
        "source": Object {
          "id": null,
          "name": "Cointelegraph.com",
        },
        "title": "Will Blockchain Technology Be Used to Build Evil Social Credit Systems?",
        "url": "https://cointelegraph.com/news/will-blockchain-technology-be-used-to-build-evil-social-credit-systems",
        "urlToImage": "https://images.cointelegraph.com/images/740_aHR0cHM6Ly9zMy5jb2ludGVsZWdyYXBoLmNvbS9zdG9yYWdlL3VwbG9hZHMvdmlldy81MDc5YjMwYzkwNzI2ZTU3ZTYxZmY4ZDRmYzEwM2U3My5qcGc=.jpg",
      },
      Object {
        "author": "Cointelegraph By Joseph Young",
        "description": "Sentiment among top Bitcoin traders remains mixed after BTC surged 5% to reach the $7,200 resistance level",
        "publishedAt": "2020-04-12T19:18:00Z",
        "source": Object {
          "id": null,
          "name": "Cointelegraph.com",
        },
        "title": "Bitcoin Price Surges to $7,200 — Here’s What Top Traders Think Is Next",
        "url": "https://cointelegraph.com/news/bitcoin-price-surges-to-7-200-heres-what-top-traders-think-is-next",
        "urlToImage": "https://images.cointelegraph.com/images/740_aHR0cHM6Ly9zMy5jb2ludGVsZWdyYXBoLmNvbS9zdG9yYWdlL3VwbG9hZHMvdmlldy9hYmQ2NjFjYTMxMjFhZTVjNjI1ZDQ3YzM5MWY3Y2QwZi5qcGc=.jpg",
      },
      Object {
        "author": "Cole Petersen",
        "description": "Chainlink’s immense bullishness seen throughout 2019 spilled into 2020, with the market-wide uptrend in January and February sending the crypto to fresh all-time highs. Even in the face of intense bearishness over the past few weeks, LINK has been able to inc…",
        "publishedAt": "2020-04-12T18:30:33Z",
        "source": Object {
          "id": null,
          "name": "Newsbtc.com",
        },
        "title": "This Top Crypto’s Grim Pattern Shows a Massive Decline May Be Imminent",
        "url": "https://www.newsbtc.com/2020/04/12/this-top-cryptos-grim-pattern-shows-a-massive-decline-may-be-imminent/",
        "urlToImage": "https://www.newsbtc.com/wp-content/uploads/2020/04/yuri-bodrikhin-wdLi8hlF3pg-unsplash-1200x780.jpg",
      },
      Object {
        "author": null,
        "description": "These attacks began reemerging in May 2018 following the Trump administration’s unilateral withdrawal from the Joint Comprehensive Plan of Action (JCPOA), also known as the Iran Nuclear Deal. Until that moment, Iran-aligned hackers had significantly reduced t…",
        "publishedAt": "2020-04-12T18:01:00Z",
        "source": Object {
          "id": null,
          "name": "Nationalcybersecurity.com",
        },
        "title": "How Iran Could Wage a Cyber War Against America | #espionage | #surveillance | #ceo | #businesssecurity | #",
        "url": "https://nationalcybersecurity.com/how-iran-could-wage-a-cyber-war-against-america-espionage-surveillance-ceo-businesssecurity/",
        "urlToImage": "https://i2.wp.com/nationalcybersecurity.com/wp-content/uploads/2020-03-26T225224Z_575922471_RC2YRF9HRIXM_RTRMADP_3_HEALTH-CORONAVIRUS-USA.JPG.jpg?fit=2000%2C1333&ssl=1",
      },
      Object {
        "author": "Cointelegraph By Samuel Haig",
        "description": "Peter Schiff has again taken aim at the crypto community, predicting that gold will “moon” while Bitcoin crashes in coming years",
        "publishedAt": "2020-04-12T17:54:00Z",
        "source": Object {
          "id": null,
          "name": "Cointelegraph.com",
        },
        "title": "Peter Schiff Predicts Gold Will ‘Moon’ While Bitcoin Crashes",
        "url": "https://cointelegraph.com/news/peter-schiff-predicts-gold-will-moon-while-bitcoin-crashes",
        "urlToImage": "https://images.cointelegraph.com/images/740_aHR0cHM6Ly9zMy5jb2ludGVsZWdyYXBoLmNvbS9zdG9yYWdlL3VwbG9hZHMvdmlldy8yY2M3NGI2MDdhZTVmY2UzMDQ4NTI4NWI0NjcxMmRjMy5qcGc=.jpg",
      },
      Object {
        "author": "ACCESSWIRE",
        "description": "NEW YORK, NY / ACCESSWIRE / April 12, 2020 / The Klein Law Firm announces that class action complaints have been filed on behalf of shareholders of the following companies. There is no cost to participate ...",
        "publishedAt": "2020-04-12T17:25:00Z",
        "source": Object {
          "id": null,
          "name": "Yahoo.com",
        },
        "title": "The Klein Law Firm Reminds Investors of Class Actions on Behalf of Shareholders of BDX, CAN and INO",
        "url": "https://ca.sports.yahoo.com/news/klein-law-firm-reminds-investors-172500312.html",
        "urlToImage": "https://s.yimg.com/cv/apiv2/social/images/yahoo_default_logo.png",
      },
      Object {
        "author": "Cointelegraph By Samuel Haig",
        "description": "The self-styled ‘SkyScanner’ for Bitcoin trading Oobit Hunter appears to host 10 affiliate links and facilitate P2P trading between customers and Oobit’s CEO",
        "publishedAt": "2020-04-12T17:00:00Z",
        "source": Object {
          "id": null,
          "name": "Cointelegraph.com",
        },
        "title": "Oobit's ‘SkyScanner for Bitcoin Trading’ Fails to Meet Expectations",
        "url": "https://cointelegraph.com/news/oobits-skyscanner-for-bitcoin-trading-fails-to-meet-expectations",
        "urlToImage": "https://images.cointelegraph.com/images/740_aHR0cHM6Ly9zMy5jb2ludGVsZWdyYXBoLmNvbS9zdG9yYWdlL3VwbG9hZHMvdmlldy9hYzhhZGY5Y2RjZDI1YzZmN2RlNjg1OTQ3NDlkNDUzOS5qcGc=.jpg",
      },
      Object {
        "author": "Trevor Smith",
        "description": "More analysts than ever are encouraging young people to take advantage of the current market dip and begin investing in Bitcoin for retirement. Whereas this idea is nothing new, current forces in the legacy financial space are making it more appealing. At lea…",
        "publishedAt": "2020-04-12T16:30:53Z",
        "source": Object {
          "id": null,
          "name": "Bitcoinist.com",
        },
        "title": "Is Bitcoin The Best Retirement Investment Option? Many Now Believe So",
        "url": "https://bitcoinist.com/bitcoin-best-retirement-investment/",
        "urlToImage": "https://bitcoinist.com/wp-content/uploads/2020/04/12-April-2-e1586708413789.jpeg",
      },
      Object {
        "author": "Nick Chong",
        "description": "Ahead of the weekly candle close in approximately eight hours, Bitcoin has embarked on a slight rally higher, retaking $7,000 just minutes ago as of the time of this article’s writing. With this, the cryptocurrency has rallied some 3.5% from the weekend low, …",
        "publishedAt": "2020-04-12T16:13:50Z",
        "source": Object {
          "id": null,
          "name": "Newsbtc.com",
        },
        "title": "Why Bitcoin Price Just Surged to $7,000 Ahead of Weekly Close",
        "url": "https://www.newsbtc.com/2020/04/12/why-bitcoin-price-just-surged-to-7000-ahead-of-weekly-close/",
        "urlToImage": "https://www.newsbtc.com/wp-content/uploads/2020/04/alexander-popov-3InMDrsuYrk-unsplash-1200x780.jpg",
      },
      Object {
        "author": "Cole Petersen",
        "description": "Ethereum has seen a slight upswing overnight that has allowed it to navigate into the $160 region following a period of overt weakness seen throughout the past couple of days. This slight rise has come about concurrently with that seen by Bitcoin and most oth…",
        "publishedAt": "2020-04-12T16:00:35Z",
        "source": Object {
          "id": null,
          "name": "Newsbtc.com",
        },
        "title": "Ethereum Moves to Shatter Bearish Trendline as “Killer Long” Opportunity Nears",
        "url": "https://www.newsbtc.com/2020/04/12/ethereum-moves-to-shatter-bearish-trendline-as-killer-long-opportunity-nears/",
        "urlToImage": "https://www.newsbtc.com/wp-content/uploads/2020/04/alex-king-lbwjS4QdpNU-unsplash-1200x780.jpg",
      },
    ],
  },
}
`;

exports[`graphql middleware query Currencies 1`] = `
Object {
  "data": Object {
    "currencies": null,
  },
  "errors": Array [
    Object {
      "locations": Array [
        Object {
          "column": 9,
          "line": 3,
        },
      ],
      "message": "Unexpected error value: { code: \\"UNABLE_TO_GET_ISSUER_CERT_LOCALLY\\" }",
      "path": Array [
        "currencies",
      ],
    },
  ],
}
`;

exports[`graphql middleware query ExchangeRates 1`] = `
Object {
  "data": Object {
    "exchangeRates": null,
  },
  "errors": Array [
    Object {
      "locations": Array [
        Object {
          "column": 9,
          "line": 3,
        },
      ],
      "message": "Unexpected error value: { code: \\"UNABLE_TO_GET_ISSUER_CERT_LOCALLY\\" }",
      "path": Array [
        "exchangeRates",
      ],
    },
  ],
}
`;

exports[`graphql middleware query Name 1`] = `
Object {
  "data": Object {
    "name": "blue-sky-action",
  },
}
`;

exports[`graphql middleware query SpotPrices 1`] = `
Object {
  "data": Object {
    "spotPrices": Array [
      Object {
        "amount": 6882.385,
        "base": "BTC",
        "code": "BTC",
        "color": "#FFB119",
        "currency": "USD",
        "name": "Bitcoin",
      },
      Object {
        "amount": 232.55,
        "base": "BCH",
        "code": "BCH",
        "color": "#8DC451",
        "currency": "USD",
        "name": "Bitcoin Cash",
      },
      Object {
        "amount": 192.460945383,
        "base": "BSV",
        "code": "BSV",
        "color": "#EAB300",
        "currency": "USD",
        "name": "Bitcoin SV",
      },
      Object {
        "amount": 157.75,
        "base": "ETH",
        "code": "ETH",
        "color": "#6F7CBA",
        "currency": "USD",
        "name": "Ethereum",
      },
      Object {
        "amount": 5.3135,
        "base": "ETC",
        "code": "ETC",
        "color": "#59D4AF",
        "currency": "USD",
        "name": "Ethereum Classic",
      },
      Object {
        "amount": 41.71,
        "base": "LTC",
        "code": "LTC",
        "color": "#B5B5B5",
        "currency": "USD",
        "name": "Litecoin",
      },
      Object {
        "amount": 0.1681025,
        "base": "ZRX",
        "code": "ZRX",
        "color": "#302C2C",
        "currency": "USD",
        "name": "0x",
      },
      Object {
        "amount": 1,
        "base": "USDC",
        "code": "USDC",
        "color": "#2774C9",
        "currency": "USD",
        "name": "USD Coin",
      },
      Object {
        "amount": 0.159085,
        "base": "BAT",
        "code": "BAT",
        "color": "#FF5000",
        "currency": "USD",
        "name": "Basic Attention Token",
      },
      Object {
        "amount": 0.47325,
        "base": "KNC",
        "code": "KNC",
        "color": "#2C8C92",
        "currency": "USD",
        "name": "Kyber Network",
      },
      Object {
        "amount": 3.406645,
        "base": "LINK",
        "code": "LINK",
        "color": "#295AD9",
        "currency": "USD",
        "name": "Chainlink",
      },
      Object {
        "amount": 1.0168195,
        "base": "DAI",
        "code": "DAI",
        "color": "#F8AF1B",
        "currency": "USD",
        "name": "Dai",
      },
      Object {
        "amount": 1.00674413196,
        "base": "SAI",
        "code": "SAI",
        "color": "#FFC927",
        "currency": "USD",
        "name": "Single Collateral Dai",
      },
      Object {
        "amount": 36.21,
        "base": "ZEC",
        "code": "ZEC",
        "color": "#EBB244",
        "currency": "USD",
        "name": "Zcash",
      },
      Object {
        "amount": 0.18825,
        "base": "XRP",
        "code": "XRP",
        "color": "#222222",
        "currency": "USD",
        "name": "XRP",
      },
      Object {
        "amount": 9.74,
        "base": "REP",
        "code": "REP",
        "color": "#553580",
        "currency": "USD",
        "name": "Augur",
      },
      Object {
        "amount": 0.048276,
        "base": "XLM",
        "code": "XLM",
        "color": "#FFFFFF",
        "currency": "USD",
        "name": "Stellar Lumens",
      },
      Object {
        "amount": 2.473,
        "base": "EOS",
        "code": "EOS",
        "color": "#000000",
        "currency": "USD",
        "name": "EOS",
      },
      Object {
        "amount": 1.98555,
        "base": "XTZ",
        "code": "XTZ",
        "color": "#2D7DF7",
        "currency": "USD",
        "name": "Tezos",
      },
      Object {
        "amount": 73.811,
        "base": "DASH",
        "code": "DASH",
        "color": "#008CE7",
        "currency": "USD",
        "name": "Dash",
      },
      Object {
        "amount": 2.285,
        "base": "ATOM",
        "code": "ATOM",
        "color": "#2D3147",
        "currency": "USD",
        "name": "Cosmos",
      },
      Object {
        "amount": 0.1639,
        "base": "OXT",
        "code": "OXT",
        "color": "#5E44BA",
        "currency": "USD",
        "name": "Orchid",
      },
      Object {
        "amount": 1.09,
        "base": "EUR",
        "code": "EUR",
        "color": "#FFFFFF",
        "currency": "USD",
        "name": "Euro",
      },
      Object {
        "amount": 1.25,
        "base": "GBP",
        "code": "GBP",
        "color": "#FFFFFF",
        "currency": "USD",
        "name": "British Pound",
      },
      Object {
        "amount": 0.72,
        "base": "CAD",
        "code": "CAD",
        "color": "#FFFFFF",
        "currency": "USD",
        "name": "Canadian Dollar",
      },
      Object {
        "amount": 0.01,
        "base": "JPY",
        "code": "JPY",
        "color": "#FFFFFF",
        "currency": "USD",
        "name": "Japanese Yen",
      },
    ],
  },
}
`;

exports[`graphql middleware query TopHeadlines 1`] = `
Object {
  "data": Object {
    "topHeadlines": Array [
      Object {
        "author": "Opinion by Richard Galant, CNN",
        "description": "Covid-19 is taking a brutal toll. More than 100,000 have died around the world and more than 18,000 in the US. Still, while the mourning proceeds, many are looking for signs of hope.",
        "publishedAt": "2020-04-12T23:35:42Z",
        "source": Object {
          "id": "cnn",
          "name": "CNN",
        },
        "title": "Don't lose hope now",
        "url": "http://us.cnn.com/2020/04/12/opinions/looking-for-hope-amid-tragedy-opinion-weekly-column-galant/index.html",
        "urlToImage": "https://cdn.cnn.com/cnnnext/dam/assets/200411123124-01-easter-bunny-coronavirus-0410-super-tease.jpg",
      },
      Object {
        "author": "Clare Duffy and Sarah Jorgensen, CNN",
        "description": "Stanley Chera, the prominent New York City real estate developer and Republican donor who co-founded Crown Acquisitions, has died of complications related to Covid-19, a source close to Chera confirmed to CNN Sunday. He was in his late 70s.",
        "publishedAt": "2020-04-12T21:22:03Z",
        "source": Object {
          "id": "cnn",
          "name": "CNN",
        },
        "title": "New York real estate mogul and Trump friend Stanley Chera died of coronavirus complications",
        "url": "http://us.cnn.com/2020/04/12/business/stanley-chera-coronavirus-trump/index.html",
        "urlToImage": "https://cdn.cnn.com/cnnnext/dam/assets/200411212848-stanley-chera-file-2018-restricted-super-tease.jpg",
      },
      Object {
        "author": "Jessica Dean and Paul LeBlanc, CNN",
        "description": "Former Vice President Joe Biden called for widespread testing and a continuation of social distancing in a New York Times op-ed published Sunday that lays out his plan to \\"safely\\" reopen the country amid the novel coronavirus pandemic.",
        "publishedAt": "2020-04-12T20:45:22Z",
        "source": Object {
          "id": "cnn",
          "name": "CNN",
        },
        "title": "Biden lays out plan 'safely' reopen country amid coronavirus pandemic",
        "url": "http://us.cnn.com/2020/04/12/politics/biden-coronavirus-plan-opinion-editorial-coronavirus/index.html",
        "urlToImage": "https://cdn.cnn.com/cnnnext/dam/assets/200318131928-joe-biden-delantera-sanders-carrera-democrata-presidente-juan-carlos-lopez-pkg-00001418-super-tease.jpg",
      },
      Object {
        "author": "Danielle Wiener-Bronner, CNN Business",
        "description": "One of the country's largest pork processing facilities is closing until further notice as employees fall ill with Covid-19. The closure puts the country's meat supply at risk, said the CEO of Smithfield, which operates the plant.",
        "publishedAt": "2020-04-12T16:42:18Z",
        "source": Object {
          "id": "cnn",
          "name": "CNN",
        },
        "title": "One of the largest pork processing facilities in the US is closing until further notice",
        "url": "http://us.cnn.com/2020/04/12/business/meat-plant-closures-smithfield/index.html",
        "urlToImage": "https://cdn.cnn.com/cnnnext/dam/assets/200412120744-01-sioux-falls-smithfield-0408-super-tease.jpg",
      },
      Object {
        "author": null,
        "description": "CNN's Jake Tapper responds to President Donald Trump's reactions to journalists who ask questions he does not like during press briefings about the novel coronavirus pandemic.",
        "publishedAt": "2020-04-12T15:08:06.0725446Z",
        "source": Object {
          "id": "cnn",
          "name": "CNN",
        },
        "title": "Jake Tapper: Mr President, these questions need answers - CNN Video",
        "url": "http://us.cnn.com/videos/politics/2020/04/12/trump-jake-tapper-coronavirus-covid-19-journalists-plan-sotu-vpx.cnn",
        "urlToImage": "https://cdn.cnn.com/cnnnext/dam/assets/200412103412-jake-tapper-04122020-super-tease.jpg",
      },
      Object {
        "author": null,
        "description": "CNN's Jake Tapper asks Dr. Anthony Fauci about the United States' initial response to the novel coronavirus pandemic.",
        "publishedAt": "2020-04-12T14:23:19.7948563Z",
        "source": Object {
          "id": "cnn",
          "name": "CNN",
        },
        "title": "Jake Tapper asks Dr. Anthony Fauci: Do you think lives could have been saved? - CNN Video",
        "url": "http://us.cnn.com/videos/politics/2020/04/12/anthony-fauci-coronavirus-covid-19-shutdown-tapper-sotu-vpx.cnn",
        "urlToImage": "https://cdn.cnn.com/cnnnext/dam/assets/200412095311-jake-tapper-anthony-fauci-split-super-tease.jpg",
      },
      Object {
        "author": "Analysis by Maeve Reston, CNN",
        "description": "As President Donald Trump leans in to his fervent desire to reopen the nation's economy by May 1, there is a major obstacle standing in his path: the nation's governors and mayors who hold the power to enforce closures and who have often taken a far more aggr…",
        "publishedAt": "2020-04-12T12:30:18Z",
        "source": Object {
          "id": "cnn",
          "name": "CNN",
        },
        "title": "Trump wants to reopen country soon. But power really lies with governors",
        "url": "http://us.cnn.com/2020/04/12/politics/governors-trump-coronavirus-response/index.html",
        "urlToImage": "https://cdn.cnn.com/cnnnext/dam/assets/200316150908-trump-governor-cuomo-split-super-tease.jpg",
      },
      Object {
        "author": "John Blake, CNN",
        "description": "It's too early to know how many Americans with HIV are dying of coronavirus. But the prospect of both incurable diseases racing through black neighborhoods has some black activists and health officials terrified.",
        "publishedAt": "2020-04-12T10:29:41Z",
        "source": Object {
          "id": "cnn",
          "name": "CNN",
        },
        "title": "Black Americans are being hammered by a double pandemic",
        "url": "http://us.cnn.com/2020/04/12/health/black-americans-hiv-coronavirus-blake/index.html",
        "urlToImage": "https://cdn.cnn.com/cnnnext/dam/assets/200408165337-04-black-americans-double-pandemic-super-tease.jpg",
      },
      Object {
        "author": "By <a href=\\"/profiles/amir-vera\\">Amir Vera</a>, <a href=\\"/profiles/fernando-alfonso-iii\\">Fernando Alfonso III</a>, <a href=\\"/profiles/james-griffiths\\">James Griffiths</a> and <a href=\\"/profiles/jenni-marsh-profile\\">Jenni Marsh</a>, CNN",
        "description": "The novel coronavirus has killed more than 102,000 people worldwide. Follow here for live updates",
        "publishedAt": "2020-04-12T00:56:51Z",
        "source": Object {
          "id": "cnn",
          "name": "CNN",
        },
        "title": "US overtakes Italy as country with highest number of coronavirus deaths - CNN",
        "url": "https://www.cnn.com/world/live-news/coronavirus-pandemic-04-12-20/index.html",
        "urlToImage": "https://cdn.cnn.com/cnnnext/dam/assets/200213175742-05-coronavirus-0213-super-tease.jpg",
      },
      Object {
        "author": null,
        "description": "CNN's Dr. Sanjay Gupta explains why the US has so many coronavirus deaths when compared with the rest of the world.",
        "publishedAt": "2020-04-09T20:38:23.6739845Z",
        "source": Object {
          "id": "cnn",
          "name": "CNN",
        },
        "title": "Dr. Gupta: Here's why US has so many coronavirus deaths - CNN Video",
        "url": "http://us.cnn.com/videos/health/2020/04/09/us-coronavirus-deaths-gupta-lead-vpx.cnn",
        "urlToImage": "https://cdn.cnn.com/cnnnext/dam/assets/200409161934-sanjay-gupta-tapper-us-virus-deaths-super-tease.jpg",
      },
    ],
  },
}
`;
